--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="/vendor/node_modules/@ibm/plex/css/ibm-plex.min.css"
+    />
     <style>
       body {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+        font-family: "IBM Plex Mono";
         line-height: 1.5;
         -webkit-text-size-adjust: 100%;
         max-width: 600px;
