--- a/index.html
+++ b/index.html
@@ -893,7 +893,7 @@
                   <a href="/leandro-facchinetti--resume.pdf"><i class="far fa-file"></i>&nbsp;Résumé: A bit about me</a>
                 </li>
                 <li>
-                  <a href="/leandro-facchinetti--curriculum-vitae.pdf"><i class="far fa-copy"></i>&nbsp;Curriculum Vitæ: A lot about
+                  <a href="/leandro-facchinetti--curriculum-vitae.pdf"><i class="far fa-copy"></i>&nbsp;Curriculum&nbsp;Vitæ: A lot about
                     me</a>
                 </li>
                 <li>
