--- a/index.html
+++ b/index.html
@@ -839,10 +839,10 @@
                   color: inherit;
                 }
                 
-                  .style--1r65nyb.style--1r65nyb.style--1r65nyb.style--1r65nyb.style--1r65nyb.style--1r65nyb {
+                  .style--1lozm6a.style--1lozm6a.style--1lozm6a.style--1lozm6a.style--1lozm6a.style--1lozm6a {
                     
               max-width: var(--width--prose);
-              padding: var(--space--4);
+              margin: var(--space--4);
               display: flex;
               flex-direction: column;
               gap: var(--space--4);
@@ -905,7 +905,7 @@
       </style>
     </head>
         <body class="style--u01b6u">
-          <div class="style--1r65nyb">
+          <div class="style--1lozm6a">
             <h1 class="style--11hb96c">
               <a href="https://leafac.com">Leandro Facchinetti</a>
             </h1>
