--- a/index.html
+++ b/index.html
@@ -926,11 +926,11 @@
                 </li>
                 <li>
                   <a href="https://patreon.com/leafac"><strong><i class="fab fa-patreon"></i>&nbsp;Patreon:</strong>
-                    Recurrent contributions</a>
+                    Ongoing support</a>
                 </li>
                 <li>
-                  <a href="https://paypal.me/LeandroFacchinetti"><strong><i class="fab fa-paypal"></i>&nbsp;PayPal:</strong>
-                    One-time contribution</a>
+                  <a href="https://paypal.me/LeandroFacchinettiEU"><strong><i class="fab fa-paypal"></i>&nbsp;PayPal:</strong>
+                    One-time support</a>
                 </li>
                 <li>
                   <a href="/leandro-facchinetti--resume.pdf"><strong><i class="far fa-file"></i>&nbsp;Résumé:</strong> A bit
