--- a/index.html
+++ b/index.html
@@ -933,6 +933,11 @@
                     One-time support</a>
                 </li>
                 <li>
+                  <a href="https://github.com/sponsors/leafac"><strong><i class="fab fa-github-alt"></i>&nbsp;GitHub
+                      Sponsors:</strong>
+                    Yet another way to support</a>
+                </li>
+                <li>
                   <a href="/leandro-facchinetti--resume.pdf"><strong><i class="far fa-file"></i>&nbsp;Résumé:</strong> A bit
                     about me</a>
                 </li>
