--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@
             <nav>
               <ul class="style--13pkpub">
                 <li>
-                  <a href="https://www.youtube.com/channel/UC_R-6HcHW5V9_FlZe30tnGA"><strong><i class="fab fa-youtube"></i>&nbsp;YouTube:</strong>
+                  <a href="https://www.youtube.com/c/leafac"><strong><i class="fab fa-youtube"></i>&nbsp;YouTube:</strong>
                     Streams about code &amp; audio production every weekday at
                     17:30&nbsp;UTC</a>
                 </li>
