--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
           rel="stylesheet"
           href="/vendor/node_modules/@fortawesome/fontawesome-free/css/all.min.css"
         />
+        <link
+          rel="stylesheet"
+          href="/vendor/node_modules/@leafac/css/distribution/browser.css"
+        />
         
       <style class="local-css">
         
