--- a/index.html
+++ b/index.html
@@ -141,29 +141,29 @@
       </head>
       
   <body
-    style="css--1ixaosx"
+    class="css--1ixaosx"
   >
     <div
-      style="css--1930o1d"
+      class="css--1930o1d"
     >
       <h1
-        style="css--x6sfjl"
+        class="css--x6sfjl"
       >
         <a href="https://leafac.com">Leandro Facchinetti</a>
       </h1>
       <p
-        style="css--1qmdij5"
+        class="css--1qmdij5"
       >
         <img
           src="avatar.png"
           alt="Avatar"
           width="300"
-          style="css--it3jdc"
+          class="css--it3jdc"
         />
       </p>
       <nav>
         <ul
-          style="css--1vamnx2"
+          class="css--1vamnx2"
         >
           <li>
             <a href="https://www.youtube.com/c/leafac"
