--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           <li>
             <a href="https://www.youtube.com/c/leafac"
               ><strong><i class="fab fa-youtube"></i> YouTube:</strong> Streams
-              about code & audio production every weekday at 17:30 UTC</a
+              about code & audio production every weekday at 18:30 UTC</a
             >
           </li>
           <li>
@@ -196,6 +196,10 @@
               >
               Yet another way to support</a
             >
+          </li>
+          <li>
+            <strong><i class="fa-brands fa-bitcoin"></i> Bitcoin:</strong>
+            34KJBgtaFYMtDqpSgMayw9qiKWg2GQXA9M Yet another way to support²
           </li>
           <li>
             <a href="/leandro-facchinetti--resume.pdf"
