--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         class="css--1qmdij5"
       >
         <img
-          src="avatar.png"
+          src="avatar.webp"
           alt="Avatar"
           width="300"
           class="css--it3jdc"
